syntax = "proto3";
package snapchat.bitmoji.accounts.v1;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCBitmoji";
option csharp_namespace = "SnapProto.Snapchat.Bitmoji.Accounts.V1";

import "google/protobuf/timestamp.proto";

message SCBitmojiSnapchatUserInfo {
    string snapchatUserId = 1;
    string bitmojiLinkageId = 2;
    .google.protobuf.Timestamp created = 3;
}

message SCBitmojiUnlinkAccountRequest {
}

message SCBitmojiUnlinkAccountResponse {
}